<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.learntocode.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.learntocode.ui.contact_us.Contact_UsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.learntocode.ui.about_us.AboutFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_privacy"
        android:name="com.example.learntocode.ui.privacy.PrivacyFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_privacy" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.learntocode.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.learntocode.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

</navigation>